# mosic

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2685587a441b_play_count.py  3bb5c961a7cb_tables.py  3ce2782a4280_init.py  977e65830256_tables.py
app/: main.py
app/core/: auth.py  config.py  db.py  media.py  metrics.py
app/models/: song.py  stats.py
app/routers/: play.py
tests/: conftest.py
tests/routers/: test_play.py
