[tool.poetry]
name = "Mosic"
version = "0.0.1"
description = ""
authors = ["Flicko <flickerdroid211@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"

sqlalchemy = { extras = ["asyncio"], version = "^2.0.44" }
fastapi = { extras = ["standard"], version = "^0.122.0" }
asyncpg = "^0.31.0"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
mutagen = "^1.47.0"
starlette-exporter = "^0.23.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.17.2"
ruff = "^0.14.6"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-postgresql = "^7.0.2"
psycopg = "^3.2.13"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"


[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["media", "alembic"]

[tool.ruff.lint]
select = ["E", "F"]


[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
